tests/ui/transmutability/malformed-program-gracefulness/wrong-type-assume.stderr
error[E0308]: mismatched types
  --> $DIR/wrong-type-assume.rs:46:42
   |
LL |     assert::is_transmutable::<Src, Dst, {0u8}, false, false, false>();
   |                                          ^^^ expected `bool`, found `u8`

error[E0308]: mismatched types
  --> $DIR/wrong-type-assume.rs:47:49
   |
LL |     assert::is_transmutable::<Src, Dst, false, {0u8}, false, false>();
   |                                                 ^^^ expected `bool`, found `u8`

error[E0308]: mismatched types
  --> $DIR/wrong-type-assume.rs:48:56
   |
LL |     assert::is_transmutable::<Src, Dst, false, false, {0u8}, false>();
   |                                                        ^^^ expected `bool`, found `u8`

error[E0308]: mismatched types
  --> $DIR/wrong-type-assume.rs:49:63
   |
LL |     assert::is_transmutable::<Src, Dst, false, false, false, {0u8}>();
   |                                                               ^^^ expected `bool`, found `u8`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
